--- a/web/src/pages/TeacherList/styles.css
+++ b/web/src/pages/TeacherList/styles.css
@@ -11,12 +11,31 @@
   color: var(--color-text-in-primary);
 }
 
+#search-teachers button {
+  width: 100%;
+  height: 5.6rem;
+  background: var(--color-secondary);
+  color: var(--color-button-text);
+  border: 0;
+  border-radius: 0.8rem;
+  cursor: pointer;
+  font: 700 1.6rem Archivo;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  transition: background-color 0.2s;
+  margin-top: 3.2rem;
+}
+
+#search-teachers button:hover {
+  background: var(--color-secondary-dark);
+}
 
 #page-teacher-list main {
   margin: 3.2rem auto;
   width: 90%;
 }
-
 
 @media (min-width: 700px) {
   #page-teacher-list {
@@ -25,7 +44,7 @@
 
   #search-teachers {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     column-gap: 16px;
     position: absolute;
     bottom: -28px;
@@ -41,5 +60,4 @@
     max-width: 740px;
     margin: 0 auto;
   }
-
 }
