--- a/web/src/pages/Landing/styles.css
+++ b/web/src/pages/Landing/styles.css
@@ -16,6 +16,7 @@
 
 .hero-image {
   width: 100%;
+  height: 25rem;
 }
 
 .logo-container {
@@ -77,7 +78,7 @@
 }
 
 .buttons-container a img {
-    margin-right: 2.4rem;
+  margin-right: 2.4rem;
 }
 
 .total-connections {
@@ -123,6 +124,7 @@
   .hero-image {
     grid-area: hero;
     justify-self: end;
+    height: 50rem;
   }
 
   .buttons-container {
@@ -138,5 +140,4 @@
     grid-area: total;
     justify-self: end;
   }
-
 }
